--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "deploy": "vite build playground"
   },
   "peerDependencies": {
+    "@unocss/preset-mini": "^0.64.1",
     "unocss": "^0.64.1"
   },
   "devDependencies": {
