--- a/package.json
+++ b/package.json
@@ -55,22 +55,26 @@
     "deploy": "vite build playground"
   },
   "peerDependencies": {
-    "@unocss/preset-mini": "^0.64.1",
     "unocss": "^0.64.1"
   },
+  "peerDependenciesMeta": {
+    "unocss": {
+      "optional": true
+    }
+  },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.9.1",
+    "@antfu/eslint-config": "^3.11.2",
     "@babel/types": "^7.26.0",
-    "@types/node": "^22.9.0",
-    "@unocss/eslint-plugin": "^0.64.1",
-    "@unocss/preset-mini": "^0.64.1",
-    "@vitejs/plugin-vue": "^5.2.0",
+    "@types/node": "^22.10.1",
+    "@unocss/eslint-plugin": "0.65.0",
+    "@unocss/preset-mini": "0.65.0",
+    "@vitejs/plugin-vue": "^5.2.1",
     "bumpp": "^9.8.1",
-    "eslint": "^9.14.0",
-    "typescript": "5.6.3",
+    "eslint": "^9.16.0",
+    "typescript": "5.7.2",
     "unbuild": "^2.0.0",
-    "unocss": "^0.64.1",
-    "vite": "^5.4.11",
-    "vitest": "^2.1.5"
+    "unocss": "0.65.0",
+    "vite": "^6.0.2",
+    "vitest": "^2.1.6"
   }
 }
