--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "unocss-preset-magicss",
   "type": "module",
   "version": "0.1.3",
-  "packageManager": "pnpm@9.13.2",
+  "packageManager": "pnpm@9.15.4",
   "description": "Integrate magic animation into unocss preset.",
   "author": "Chris <https://github.com/zyyv>",
   "license": "MIT",
@@ -55,7 +55,7 @@
     "deploy": "vite build playground"
   },
   "peerDependencies": {
-    "unocss": "^0.64.1"
+    "unocss": "^0.64.1 || ^65.4.0"
   },
   "peerDependenciesMeta": {
     "unocss": {
@@ -63,17 +63,17 @@
     }
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.11.2",
-    "@babel/types": "^7.26.0",
-    "@types/node": "^22.10.1",
-    "@unocss/eslint-plugin": "0.65.0",
+    "@antfu/eslint-config": "^3.14.0",
+    "@babel/types": "^7.26.5",
+    "@types/node": "^22.10.6",
+    "@unocss/eslint-plugin": "65.4.0",
     "@vitejs/plugin-vue": "^5.2.1",
-    "bumpp": "^9.8.1",
-    "eslint": "^9.16.0",
-    "typescript": "5.7.2",
-    "unbuild": "^2.0.0",
-    "unocss": "0.65.0",
-    "vite": "^6.0.2",
-    "vitest": "^2.1.6"
+    "bumpp": "^9.10.0",
+    "eslint": "^9.18.0",
+    "typescript": "5.7.3",
+    "unbuild": "^3.3.1",
+    "unocss": "65.4.0",
+    "vite": "^6.0.7",
+    "vitest": "^2.1.8"
   }
 }
