--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "unocss-preset-magicss",
   "type": "module",
   "version": "1.0.0",
-  "packageManager": "pnpm@9.15.4",
+  "packageManager": "pnpm@10.12.1",
   "description": "Integrate magic animation into unocss preset.",
   "author": "Chris <https://github.com/zyyv>",
   "license": "MIT",
@@ -24,12 +24,11 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs"
+      "import": "./dist/index.js"
     }
   },
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.mjs",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "typesVersions": {
     "*": {
@@ -43,8 +42,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "unbuild",
-    "dev": "unbuild --stub",
+    "build": "tsdown",
+    "dev": "tsdown --watch",
     "prepublishOnly": "pnpm run build",
     "release": "bumpp --commit --push --tag && pnpm publish",
     "lint": "eslint .",
@@ -55,7 +54,7 @@
     "deploy": "vite build playground"
   },
   "peerDependencies": {
-    "unocss": "^0.64.1 || ^65.4.0"
+    "unocss": "^0.64.1 || >=65.4.0"
   },
   "peerDependenciesMeta": {
     "unocss": {
@@ -63,17 +62,17 @@
     }
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.14.0",
-    "@babel/types": "^7.26.5",
-    "@types/node": "^22.10.6",
-    "@unocss/eslint-plugin": "65.4.0",
-    "@vitejs/plugin-vue": "^5.2.1",
-    "bumpp": "^9.10.0",
-    "eslint": "^9.18.0",
+    "@antfu/eslint-config": "^4.14.1",
+    "@babel/types": "^7.27.6",
+    "@types/node": "^24.0.3",
+    "@unocss/eslint-plugin": "^66.2.3",
+    "@vitejs/plugin-vue": "^5.2.4",
+    "bumpp": "^10.2.0",
+    "eslint": "^9.29.0",
+    "tsdown": "^0.12.8",
     "typescript": "5.7.3",
-    "unbuild": "^3.3.1",
-    "unocss": "65.4.0",
-    "vite": "^6.0.7",
-    "vitest": "^2.1.8"
+    "unocss": "^66.2.3",
+    "vite": "^6.3.5",
+    "vitest": "^3.2.4"
   }
 }
